--- a/INDEX.html
+++ b/INDEX.html
@@ -9,6 +9,6 @@
 <body>
     <h1>BBDD NO ME GUSTA</h1>
     <h2>Cositas</h2>
-    <p>Es broma jajajjajj</p>
+    <p>Es broma jajajjajJj</p>
 </body>
 </html> 
