--- a/INDEX.html
+++ b/INDEX.html
@@ -10,5 +10,11 @@
     <h1>BBDD NO ME GUSTA</h1>
     <h2>Cositas</h2>
     <p>Es broma jajajjajj</p>
+    <ul>
+        <li>España</li>
+        <li>España 2</li>
+        <li>España 3</li>
+        <li>España 4</li>
+    </ul>
 </body>
 </html> 
